# corgis_wind_turbines

./: README.md  example.ipynb  example.py  pyproject.toml
