[tool.poetry]
name = "corgis_wind_turbines"
version = "0.1.0"
description = ""
authors = ["Martin Marcher <serverhorror@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "~1.2.5"
plotly = "^5.1.0"
matplotlib = "^3.4.2"
nbformat = "^5.1.3"
chart-studio = "^1.1.0"
[tool.poetry.dev-dependencies]
ipykernel = "^6.0.1"
black = {version = "^21.6b0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
